# muso

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  Cargo.toml  README.md  TODO.md
.github/actions/commit_pkgbuild/: action.yml  entrypoint.sh
.github/actions/generate_srcinfo/: action.yml  entrypoint.sh
.github/actions/push_pkgbuild/: Dockerfile  action.yml  entrypoint.sh
.github/workflows/: integration.yaml  main.yml  publishing.yml  rust.yml
cli/: cli.rs  error.rs  logger.rs  main.rs
lib/: config.rs  format.rs  lib.rs  metadata.rs  sorting.rs  sync.rs  utils.rs
lib/sync/: listener.rs  rpc.rs  sha256.rs  state.rs
libmuso/: Cargo.toml
libmuso/src/: format.rs  lib.rs  metadata.rs  sorting.rs  sync.rs  watcher.rs
libmuso/src/format/: parser.rs
libmuso/src/sync/: sha256.rs
libmuso/test_files/: complete.m4a  partial.m4a
libmuso/tests/: format_string.rs
share/: config.toml  muso.service
src/: args.rs  config.rs  error.rs  format.rs  lib.rs  logger.rs  main.rs  metadata.rs  muso.rs  utils.rs
test_files/: complete.flac  complete.m4p  partial.flac  partial.m4p
tests/: format_string.rs
