[package]
authors = ["Kevin <quebin31@gmail.com>"]
edition = "2018"
name = "muso"
version = "1.5.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.33"
cfg-if = "1.0.0"
clap = "2.33.3"
human-panic = "1.0.3"
libmuso = {version = "1.5.1", path = "libmuso"}
log = "0.4.11"
thiserror = "1.0.21"

[features]
default = []
standalone = []
sync = ["libmuso/sync"]
