[package]
authors = ["Kevin <quebin31@gmail.com>"]
edition = "2018"
name = "muso"
version = "2.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "muso"
path = "cli/main.rs"

[lib]
name = "muso"
path = "lib/lib.rs"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.34"
cfg-if = "1.0.0"
clap = "3.0.0-beta.2"
dirs = "3.0.1"
human-panic = "1.0.3"
id3 = "0.5.1"
infer = "0.3.1"
lewton = "0.10.1"
log = "0.4.11"
metaflac = "0.2.4"
mp4ameta = "0.7.1"
nom = "6.0.1"
notify = "4.0.15"
ogg = "0.7.1"
shellexpand = "2.0.0"
thiserror = "1.0.22"
toml = "0.5.7"
try-block = "0.1.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.117"

[dependencies.chrono]
features = ["serde"]
version = "0.4.19"

[dev-dependencies]
anyhow = "1.0.34"
text_io = "0.1.8"

[features]
default = []
standalone = []
