[package]
authors = ["Kevin Del Castillo <quebin31@gmail.com>"]
edition = "2018"
name = "libmuso"
version = "1.5.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
id3 = "0.5.1"
infer = "0.2.3"
lewton = "0.10.1"
metaflac = "0.2.4"
nom = "5.1.2"
ogg = "0.7.0"
thiserror = "1.0.21"
