[package]
authors = ["Kevin Del Castillo <quebin31@gmail.com>"]
edition = "2018"
name = "libmuso"
version = "1.5.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0.1"
id3 = "0.5.1"
infer = "0.2.3"
lewton = "0.10.1"
log = "0.4.11"
metaflac = "0.2.4"
mp4ameta = "0.5.0"
nom = "5.1.2"
notify = "4.0.15"
ogg = "0.7.0"
shellexpand = "2.0.0"
thiserror = "1.0.21"
toml = "0.5.7"

bincode = {version = "1.3.1", optional = true}
libmtp-rs = {version = "0.5.1", optional = true}
sha2 = {version = "0.9.1", optional = true}
walkdir = {version = "2.3.1", optional = true}

[dependencies.serde]
features = ["derive"]
version = "1.0.117"

[dependencies.chrono]
features = ["serde"]
version = "0.4.19"

[features]
default = []
sync = ["libmtp-rs", "sha2", "walkdir", "bincode"]
